--- a/website/.gitignore
+++ b/website/.gitignore
@@ -11,3 +11,6 @@ website/node_modules
 website/i18n/*
 !website/i18n/en.json
 .docusaurus/
+
+# remove this later (https://github.com/facebook/docusaurus/issues/6631)
+tailwind.config.js
